Changed the links color in CSS and modified the CSS path in HTML link tag

--- a/BlogPost/postpage.html
+++ b/BlogPost/postpage.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Lukmon Lasisi">
     <meta name="keywords" content="learning, code, easy, ways, coding">
-    <link rel="stylesheet" href="CSS/theBlog.css">
+    <link rel="stylesheet" href="theBlog.css">
 
 </head>
 <body>
